--- a/css/style-home.css
+++ b/css/style-home.css
@@ -1,7 +1,9 @@
 
     html, body {
-        margin: 0;
-        padding: 0;
+        margin:0;
+        font-family: 'Hind', sans-serif;
+         /* overflow-x: hidden; */
+
       } 
 
 
@@ -25,6 +27,15 @@
 top: 0;
 position: absolute;
 font-family: 'Hind', sans-serif;
+}
+
+nav a{
+  font-weight: lighter;
+  font-size: 13px; 
+  list-style: height 2.5;
+  cursor: pointer;
+  text-decoration: none;
+
 }
 
 
@@ -197,17 +208,18 @@ font-family: 'Hind', sans-serif;
     text-align: center;
     position: absolute;
     top:0;
-    color:darkslategrey;
+    color:rgb(47, 6, 59);
 }
 
 .firstsection p{
     margin:0 auto;
-    margin-top: 7.5em;
+    margin-top: 8em;
     font-weight: 4em;
     text-align: center;
     width: 37rem;
     /* position: absolute; */
     margin-right: 150px;
+    color:rgb(47, 6, 59);
 }
 
 /* animation */
@@ -228,7 +240,7 @@ svg {
   }
 
 .secondsection{
-    height: 60em;
+    height: 50em;
     background-color: rgb(184, 151, 163);
     position: relative;
     /* display: flex; */
@@ -241,7 +253,7 @@ svg {
     font-family: 'Playfair Display SC', serif;
     margin-left:auto;
     margin-right: auto;
-    width: fit-content;
+    width: 8.5em;
     font-size: 40px;
     color: white;
     letter-spacing: 0.4em;
@@ -251,23 +263,6 @@ svg {
 
 
 
-
-.secondsection h2{
-    color:white;
-    width:fit-content;
-    margin-left:auto;
-    margin-right: auto;
-    text-align: center;
-    width: fit-content;
-    padding-top: 1em;
-    padding-bottom: 0em;
-    line-height: 1em;
-    color: rgba(218, 235, 245, 0.877);
-    letter-spacing: 0.7em;
-    font-size: 0.85em;
-    text-decoration: none;
-
-}
 
 #aboutsubsection{
     padding-top: 3.7em;
@@ -282,9 +277,10 @@ svg {
 }
 
 #katiepic{
-    height: 26em;
+    height: 27em;
     padding-left: 6.5em;
     display:inline-block;
+    width: 20em;
 
     
 }
@@ -293,6 +289,7 @@ svg {
     list-style-type: none;
     position: relative;
     padding-left: 6.5em;
+    height: 6em;
 }
 
 
@@ -319,26 +316,6 @@ svg {
     line-height: 1.4em;
     letter-spacing: 0.05em;
 }
-
-
-  .ml11 .text-wrapper {
-    position: relative;
-    display: inline-block;
-    padding-top: 0.1em;
-    padding-right: 0.05em;
-    padding-bottom: 0.15em;
-  }
-
-  
-  .ml11 .letter {
-    display: inline-block;
-    line-height: 1em;
-    color: rgba(255, 255, 255, 0.877);
-    width:fit-content;
-    letter-spacing: 0.5em;
-    font-size: 0.5em;
-  
-  }
 
 
 
@@ -395,13 +372,18 @@ svg {
 }
 
 .thirdsection{
-    height: 1000em;
-    background-color: rgba(255, 255, 255, 0.849);
-    position: relative;
-    /* display: flex; */
-    justify-content: center;
-    align-items: center;
+  background-color:rgba(255, 255, 255, 0.404);
+  height: 50em;
+  position: relative;
+  margin-top: 7.5em;
+  text-align: center;
+  
 }
+
+.thirdsection h1{
+  color: black;
+}
+
 
 .thirdsection h1{
     padding-top: 2.5em;
@@ -414,18 +396,131 @@ svg {
     letter-spacing: 0.4em;
 }
 
-.thirdsubsection{
+#podcastsection{
+  width: 90%;
+  padding-top: 6em;
+  position: relative;
+  text-align: center;
+  display: inline-block;
+  
+
+}
+
+.item-holder{
+  display: inline-block;
+  height: 20em;
+  width: 20em;
+  z-index: 0;
+  overflow:hidden;
+  position:relative; 
+}
+
+.item-holder:hover{
+  overflow:visible;
+  z-index:100;
+}
+
+#holder1{
+  margin-right: 6em;
+}
+
+#holder2{
+  margin-left: 6em;
+}
+
+.item-holder:hover #podcast1{
+  -ms-transform: scale(1.3);
+   -webkit-transform: scale(1.3);
+   -moz-transform:scale(1,3);
+   transform: scale(1.3);
+   z-index:8;
+   transition-duration: 0.4s;
+   -webkit-box-shadow: 0 0 40px rgb(59, 59, 59);
+   box-shadow: 0 0 40px rgb(51, 51, 51);
+   opacity:0.8;
+   -webkit-filter: brightness(60%);
+   -moz-filter: brightness(60%);
+
+
+}
+
+#podcast1{
+  position: absolute;
+  width: 20em;
+  background-image:url("../assets/sunset.jpg");
+  background-size:cover;
+  height: 20em;
+  
+  }
+  
+}
+
+#podcast1:hover{
+  width: 22em;
+  height: 22em;
+  top:-1em;
+  left: -1em;
+  transition: ease;
+  transition-duration: 0.5s;
+  top:-5em;
+
+}
+
+
+#podcast2{
+  position: absolute;
+  width: 20em;
+  background-image: url("../assets/downtown.jpg");
+  background-size: cover;
+  height: 20em;
+}
+
+
+.item-holder:hover #podcast2{
+  -ms-transform: scale(1.3);
+  -webkit-transform: scale(1.3);
+  -moz-transform:scale(1,3);
+  transform: scale(1.3);
+  z-index:8;
+  transition-duration: 0.4s;
+  -webkit-box-shadow: 0 0 40px rgb(59, 59, 59);
+  box-shadow: 0 0 40px rgb(51, 51, 51);
+  opacity:0.8;
+  -webkit-filter: brightness(60%);
+  -moz-filter: brightness(60%);
+
+}
+
+.thirdsection h3{
+  color: white;
+  margin-top: 6em;
+  letter-spacing: .2em;
+  font-size: 1.3em;
+
+}
+
+.item-holder:hover h3{
+  color: white;
+  opacity: 1;
+  font-size: 1.38em;
+  margin-top: 5.58em;
+  transition-duration: 0.2s;
+  opacity: 0.3;
+}
+
+
+
+/* .thirdsubsection{
     margin-top: 4.2em;
     display: inline-block;
     display: flex;
     justify-content: space-between;
-    /* padding-bottom: 0em; */
-    /* margin-bottom: 1em; */
+
     width: 80%;
     margin-left:auto;
     margin-right: auto;
     
-}
+} */
 
 
 
@@ -474,32 +569,6 @@ svg {
 
 
 
-h2{
-    font-weight: bolder;
-    font-size: 25px; 
-    list-style: height 2.5;
-    text-decoration: underline;
-}
-nav a{
-    font-weight: lighter;
-    font-size: 13px; 
-    list-style: height 2.5;
-    cursor: pointer;
-    text-decoration: none;
-
-}
-
-
-*{
-    color:black;
-}
-
-li{
-    font-weight: lighter;
-    font-size: 15px; 
-    font-family:-apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-    list-style: height 2.5;
-}
 
 
 
